--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,11 @@ nav{
   padding-right: 5px;
 }
 
+.fa, .fa-bars{
+  display: none;
+  opacity: 0;
+}
+
 /* fine nav */
 
 /* inizio header */
@@ -107,8 +112,7 @@ header{
   margin-top: 100px;
   height: 960px;
   width: 100%;
-  background-color: green;
-  background-image: url(img/hero.jpg);
+  background-image: url(../img/hero.jpg);
 }
 
 .jumbotron-title{
@@ -269,6 +273,7 @@ main{
   text-decoration: none !important;
   display: inline-block !important;
   font-size: 25px !important;
+  cursor: pointer;
 }
 
 .slicker-voci .items{
@@ -291,7 +296,6 @@ main{
 .bloccodopo{
   height: 630px;
   width: 100%;
-  /* background-color: blue; */
 }
 
 .blocchidopo{
@@ -315,6 +319,10 @@ main{
 
 .blocchidopo>article>h2{
   text-align: center;
+}
+
+.blocchidopo>article>h4{
+  text-transform: uppercase;
 }
 
 .cosmobutton{
@@ -350,7 +358,7 @@ main{
   height: 510px;
   background-color: black;
   width: 100%;
-  background-image: url(img/forest.jpg);
+  background-image: url(../img/forest.jpg);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -568,3 +576,236 @@ footer{
 .footer-bottom>span:last-child{
   border: none;
 }
+
+@media screen and (max-width: 415px) {
+
+  .nav-left, .nav-right{
+    margin: 0;
+    height: 100%;
+  }
+
+  .header-menu ul{
+    display: none;
+  }
+
+  .jumbotron{
+    height: 460px;
+  }
+
+  .jumbotron-title{
+    text-align: center;
+  }
+
+  .jumbotron-main{
+    margin-left: 0;
+    flex-direction: column;
+    font-size: 40px;
+    margin-top: 50px;
+  }
+
+  .jumbotron-title{
+    padding: 0;
+    margin: 0;
+    margin-top: 20px;
+  }
+
+  .jmain-left{
+    padding: 0;
+    margin: 0;
+    text-align: center;
+  }
+
+  .jmain-center{
+    transform: rotate(90deg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    text-align: center;
+    margin-left: 55px;
+    margin-top: -136px;
+  }
+
+  .jmain-right{
+    padding: 0;
+    margin: 0;
+    margin-top: -100px;
+  }
+
+  .main-info{
+    width: 100%;
+    height: 1800px;
+  }
+
+  .ordersender{
+    width: 100%;
+    height: 150px;
+  }
+
+  .ordersender img{
+    width: 100%;
+    height: 150px;
+  }
+
+  .info-schede{
+    width: 100%;
+    height: 1200px;
+  }
+
+  .slicker-voci{
+    width: 100%;
+  }
+
+  .info-news h2{
+    font-size: 40px;
+  }
+
+  .info-news h3{
+    font-size: 40px;
+  }
+
+  .bloccodopo{
+    height: auto;
+  }
+
+  .blocchidopo{
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .banner-green{
+    height: 988px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .banner-green>img{
+    margin: 0;
+  }
+
+  .green-right{
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+    height: auto;
+  }
+
+  .green-right>#pory{
+    top: 20px;
+    left: -120px;
+  }
+
+  .contatti{
+    width: 100%;
+    flex-direction: column;
+    height: 1500px;
+  }
+
+  .contatti-right{
+    width: 80%;
+  }
+
+  .contatti-info{
+    flex-direction: column;
+  }
+
+  .contatti-info input{
+    width: 95%;
+    height: 100px;
+    font-size: 20px;
+  }
+
+  .contatti-left{
+    width: 100%;
+    margin-top: 60px;
+  }
+
+  .contatti-left>h2{
+    font-size: 30px;
+  }
+
+  .contatti-left>span{
+    font-size: 30px;
+  }
+
+  .contatti-right>textarea{
+    width: 95%;
+    height: 150px;
+    font-size: 20px;
+  }
+
+  .contatti-contatti {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+    height: 200px;
+    justify-content: space-around;
+  }
+
+  .contatti-contatti span{
+    font-size: 20px;
+    text-align: center;
+  }
+
+  .informativa{
+    height: 50px;
+    width: 100%;
+    font-size: 16px;
+  }
+
+  .informativa input{
+    height: 70px;
+    width: 70px;
+  }
+
+  footer{
+    height: 2000px;
+    width: 100%;
+  }
+
+  .footer-top{
+    height: auto;
+    flex-direction: column;
+    padding: 0;
+    align-items: center;
+  }
+
+  .footer-info{
+    font-size: 25px;
+    width: 95%;
+    height: 500px;
+  }
+
+  .footer-list{
+    width: 65%;
+    height: auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    font-size: 30px;
+  }
+
+  .footer-list ul:nth-child(1), .footer-list ul:nth-child(3) {
+    margin-bottom: 50px;
+  }
+
+  .footer-bottom{
+    height: 200px;
+    font-size: 22px;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .footer-bottom i:nth-child(1){
+    margin-left: 75px;
+  }
+
+  .pory2{
+    margin-right: 81px;
+  }
