--- a/css/style.css
+++ b/css/style.css
@@ -579,6 +579,11 @@ footer{
 
 @media screen and (max-width: 415px) {
 
+  html{
+    width: 100vw;
+    overflow-x: hidden;
+  }
+
   .nav-left, .nav-right{
     margin: 0;
     height: 100%;
@@ -592,10 +597,6 @@ footer{
     height: 460px;
   }
 
-  .jumbotron-title{
-    text-align: center;
-  }
-
   .jumbotron-main{
     margin-left: 0;
     flex-direction: column;
@@ -607,6 +608,8 @@ footer{
     padding: 0;
     margin: 0;
     margin-top: 20px;
+    text-align: center;
+    font-size: 32px;
   }
 
   .jmain-left{
@@ -644,7 +647,7 @@ footer{
 
   .ordersender img{
     width: 100%;
-    height: 150px;
+    height: 130px;
   }
 
   .info-schede{
@@ -691,6 +694,10 @@ footer{
     align-items: center;
     width: 90%;
     height: auto;
+  }
+
+  .green-right>img{
+    width: 350px;
   }
 
   .green-right>#pory{
