--- a/css/style.css
+++ b/css/style.css
@@ -591,6 +591,7 @@ footer{
 
   .logo{
     margin: 0;
+    width: 100%;
   }
 
   .header-menu{
@@ -774,7 +775,7 @@ footer{
   }
 
   footer{
-    height: 2000px;
+    height: 1816px;
     width: 100%;
   }
 
@@ -807,7 +808,7 @@ footer{
   }
 
   .footer-bottom{
-    height: 200px;
+    height: 100px;
     font-size: 22px;
     justify-content: center;
     flex-wrap: wrap;
